<resources>
    <string name="wallet_app_name">DipperWallet</string>
    <string name="db_password" translatable="false">wannabit</string>
    <string name="url_coinmarketcap" translatable="false">https://api.coinmarketcap.com/</string>
    <string name="url_coingecko" translatable="false">https://api.coingecko.com/</string>
    <string name="url_moon_pay" translatable="false">https://buy.moonpay.io</string>
    <string name="url_css" translatable="false">https://api-wallet.cosmostation.io/</string>
    <string name="url_lcd_cosmos_main" translatable="false">https://lcd-cosmos-app.cosmostation.io/</string>
    <string name="url_api_cosmos_main" translatable="false">https://api.cosmostation.io/</string>
    <string name="url_lcd_iris_main" translatable="false">https://lcd-iris.cosmostation.io/</string>
    <string name="url_api_iris_main" translatable="false">https://api-iris.cosmostation.io/</string>
    <string name="url_main_bnb" translatable="false">https://dex.binance.org/</string>
    <string name="url_test_bnb" translatable="false">https://testnet-dex.binance.org/</string>
    <string name="url_test_bnb_faucet" translatable="false">https://faucet-binance.cosmostation.io</string>
    <string name="url_lcd_kava_main" translatable="false">https://lcd-kava-3.cosmostation.io/</string>
    <string name="url_api_kava_main" translatable="false">https://api-kava-3.cosmostation.io/</string>
    <string name="url_kava_faucet" translatable="false">https://faucet-kava-3.cosmostation.io</string>
    <string name="url_lcd_kava_test" translatable="false">https://lcd-kava-testnet-9000.cosmostation.io/</string>
    <string name="url_api_kava_test" translatable="false">https://api-kava-testnet-9000.cosmostation.io/</string>
    <string name="url_test_kava_faucet" translatable="false">https://faucet-kava-testnet-9000.cosmostation.io</string>
    <string name="url_lcd_iov_main" translatable="false">https://lcd-iov.cosmostation.io/</string>
    <string name="url_api_iov_main" translatable="false">https://api-iov.cosmostation.io/</string>
    <string name="url_lcd_iov_test" translatable="false">https://iovnscli-rest-api.cluster-galaxynet.iov.one/</string>
    <string name="url_api_iov_test" translatable="false"></string>
    <string name="url_test_iov_faucet" translatable="false">https://faucet.cluster-galaxynet.iov.one/</string>
    <string name="url_lcd_band_main" translatable="false">https://lcd-band.cosmostation.io/</string>
    <string name="url_api_band_main" translatable="false">https://api-band-wenchang-mainnet.cosmostation.io/</string>
    <string name="url_lcd_ok_test" translatable="false">https://lcd-okexchain-testnet1.cosmostation.io/</string>
    <string name="url_api_ok_test" translatable="false"></string>
    <string name="url_lcd_certik_test" translatable="false">https://lcd-certik-testnet3.cosmostation.io/</string>
    <string name="url_api_certik_test" translatable="false">https://api-certik-testnet3.cosmostation.io/</string>
    <string name="key_mnemonic" translatable="false">MNEMONIC_KEY</string>
    <string name="key_password" translatable="false">PASSWORD_KEY</string>
    <string name="str_atom_c" translatable="false">ATOM</string>
    <string name="str_photon_c" translatable="false">PHOTINO</string>
    <string name="str_kava_c" translatable="false">KAVA</string>
    <string name="str_iov_c" translatable="false">IOV</string>
    <string name="str_band_c" translatable="false">BAND</string>
    <string name="str_ok_c" translatable="false">OKT</string>
    <string name="str_bnb_c" translatable="false">BNB</string>
    <string name="str_btc_c" translatable="false">BTC</string>
    <string name="str_ctk_c" translatable="false">CTK</string>
    <string name="str_create_swap_memo_c" translatable="false">Create Atomic Swap via Cosmostation Wallet</string>
    <string name="str_claim_swap_memo_c" translatable="false">Claim Atomic Swap via Cosmostation Wallet</string>
    <string name="str_refund_swap_memo_c" translatable="false">Refund Atomic Swap via Cosmostation Wallet</string>
    <string name="str_cosmos_time_format" translatable="false">yyyy-MM-dd<![CDATA["'"]]>T<![CDATA["'"]]>HH:mm:ss.SSS</string>
    <string name="str_block_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss.SSSSSSSSS\'Z\']]></string>
    <string name="str_tx_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss\'Z\']]></string>
    <string name="str_decimal_pattern_0" translatable="false">###,###,###,###,###,###,###,##0</string>
    <string name="str_decimal_pattern_1" translatable="false">###,###,###,###,###,###,###,##0.0</string>
    <string name="str_decimal_pattern_2" translatable="false">###,###,###,###,###,###,###,##0.00</string>
    <string name="str_decimal_pattern_3" translatable="false">###,###,###,###,###,###,###,##0.000</string>
    <string name="str_decimal_pattern_4" translatable="false">###,###,###,###,###,###,###,##0.0000</string>
    <string name="str_decimal_pattern_5" translatable="false">###,###,###,###,###,###,###,##0.00000</string>
    <string name="str_decimal_pattern_6" translatable="false">###,###,###,###,###,###,###,##0.000000</string>
    <string name="str_decimal_pattern_7" translatable="false">###,###,###,###,###,###,###,##0.0000000</string>
    <string name="str_decimal_pattern_8" translatable="false">###,###,###,###,###,###,###,##0.00000000</string>
    <string name="str_decimal_pattern_9" translatable="false">###,###,###,###,###,###,###,##0.000000000</string>
    <string name="str_decimal_pattern_10" translatable="false">###,###,###,###,###,###,###,##0.0000000000</string>
    <string name="str_decimal_pattern_11" translatable="false">###,###,###,###,###,###,###,##0.00000000000</string>
    <string name="str_decimal_pattern_12" translatable="false">###,###,###,###,###,###,###,##0.000000000000</string>
    <string name="str_decimal_pattern_13" translatable="false">###,###,###,###,###,###,###,##0.0000000000000</string>
    <string name="str_decimal_pattern_14" translatable="false">###,###,###,###,###,###,###,##0.00000000000000</string>
    <string name="str_decimal_pattern_15" translatable="false">###,###,###,###,###,###,###,##0.000000000000000</string>
    <string name="str_decimal_pattern_16" translatable="false">###,###,###,###,###,###,###,##0.0000000000000000</string>
    <string name="str_decimal_pattern_17" translatable="false">###,###,###,###,###,###,###,##0.00000000000000000</string>
    <string name="str_decimal_pattern_18" translatable="false">###,###,###,###,###,###,###,##0.000000000000000000</string>
    <string name="str_cosmos_main_net">COSMOS Mainnet</string>
    <string name="str_cosmos_test_net_12k">COSMOS Testnet (GAIA 12k)</string>
    <string name="str_cosmos_test_net_13k">COSMOS Testnet (GAIA 13k)</string>
    <string name="str_iris_main_net">IRIS Mainnet</string>
    <string name="str_bnb_main_net">Binance Mainnet</string>
    <string name="str_iov_main_net">Starname Mainnet</string>
    <string name="str_kava_main_net">Kava Mainnet</string>
    <string name="str_band_main_net">Band Mainnet</string>
    <string name="str_bnb_test_net">Binance Testnet</string>
    <string name="str_kava_test_net">Kava Testnet</string>
    <string name="str_iov_test_net">Starname Testnet</string>
    <string name="str_ok_test_net">Okex Testnet</string>
    <string name="str_certik_test_net">Certik Testnet</string>
    <string name="str_coingecko" translatable="false">CoinGecko</string>
    <string name="str_coinmarketcap" translatable="false">CoinMarket Cap</string>
    <string name="moon_pay_public_key" translatable="false">pk_live_zbG1BOGMVTcfKibboIE2K3vduJBTuuCn</string>
    <string name="str_ok">OK</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_next">Next</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_settings">Settings</string>
    <string name="str_sorting">Sorting</string>
    <string name="str_qr">QrCode</string>
    <string name="str_import">IMPORT</string>
    <string name="str_clear_all">Clear All</string>
    <string name="str_create">CREATE</string>
    <string name="str_check_mnemonic_c">CHECK MNEMONICS</string>
    <string name="str_check">Check</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_warning">Warning</string>
    <string name="str_show_mnemonic">Show Mnemonic</string>
    <string name="str_create_wallet">Create Wallet</string>
    <string name="str_start_wallet">Start Wallet</string>
    <string name="str_import2">Import</string>
    <string name="str_mnemonic">Mnemonic</string>
    <string name="str_watch">Watch</string>
    <string name="str_address">Address</string>
    <string name="str_paste">Paste</string>
    <string name="str_send_c">SEND</string>
    <string name="str_htlc_send_c"><![CDATA[Interchain Send & Claim]]></string>
    <string name="str_htlc_refund_c">Interchain Refund</string>
    <string name="str_participate_incentive">Crypto Payday Participate</string>
    <string name="str_receive_c">RECEIVE</string>
    <string name="str_send">Send</string>
    <string name="str_receive">Receive</string>
    <string name="str_change_reward_address_c">CHANGE REWARD ADDRESS</string>
    <string name="str_delegate_c">DELEGATE</string>
    <string name="str_undelegate_c">UNDELEGATE</string>
    <string name="str_redelegate_c">REDELEGATE</string>
    <string name="str_reinvest_c">RE-INVEST</string>
    <string name="str_before">Before</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_no_more_3day">Hide 3 days</string>
    <string name="str_continue">Continue</string>
    <string name="str_connect">Connect</string>
    <string name="str_wait">Wait</string>
    <string name="str_recipient_address">Recipient Address</string>
    <string name="str_starname_recipient_address">StarName or Recipient Address</string>
    <string name="str_recipient_chain">Recipient Chain</string>
    <string name="str_claim_address">Claim Address</string>
    <string name="str_done">Done</string>
    <string name="str_dismiss">Dismiss</string>
    <string name="str_memo">Memo</string>
    <string name="str_fees">Fee</string>
    <string name="str_fees_c">FEE</string>
    <string name="str_to_send_amount">Send Amount</string>
    <string name="str_expected_receive_amount">Final Receive Amount</string>
    <string name="str_relay_fee">Relay Fee</string>
    <string name="str_claim_fee">Claim Tx Fee</string>
    <string name="str_send_fee">Send Tx Fee</string>
    <string name="str_total_spend_amount">Total Spend</string>
    <string name="str_current_available">Current Available</string>
    <string name="str_remaining_available">Remaining Available</string>
    <string name="str_from_c">FROM</string>
    <string name="str_to_c">TO</string>
    <string name="str_memo_c">MEMO</string>
    <string name="str_remind_balance">Remaining balance</string>
    <string name="str_to_undelegate_amount">Undelegate Amount</string>
    <string name="str_to_redelegate_amount">Redelegate Amount</string>
    <string name="str_to_delegate_amount">Delegate Amount</string>
    <string name="str_reinvest_amount">Reinvest Amount</string>
    <string name="str_to_delegate_validator">Delegate To</string>
    <string name="str_from_undelegate_validator">Undelegate From</string>
    <string name="str_from_redelegate_validator">Redelegate From</string>
    <string name="str_to_redelegate_validator">Redelegate To</string>
    <string name="str_undelegate_complete_time">Expected Delivery</string>
    <string name="str_remind_delegate">Remind Delegate</string>
    <string name="str_reward_c">CLAIM REWARD</string>
    <string name="str_reward_amount">Reward Amount</string>
    <string name="str_reward_from">Reward From</string>
    <string name="str_reward_to">Reward Recipient Address</string>
    <string name="str_expected_balance">Expected Available</string>
    <string name="str_success">success</string>
</resources>