<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_32">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dip_net"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:src="@drawable/cosmos_wh_main" />

            <TextView
                style="@style/font_ss_14_gray8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="dip-test" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_net"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_4"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:src="@drawable/cosmos_wh_main" />

            <TextView
                style="@style/font_ss_14_gray8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_cosmos_main_net" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/iris_net"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:src="@drawable/irisnet" />

            <TextView
                style="@style/font_ss_14_gray8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_iris_main_net" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/binance_net"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:src="@drawable/binance_ch_img" />

            <TextView
                style="@style/font_ss_14_gray8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_bnb_main_net" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/iov_net"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:src="@drawable/iov_chain_img" />

            <TextView
                style="@style/font_ss_14_gray8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_iov_main_net" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/kava_net"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:src="@drawable/kava_img" />

            <TextView
                style="@style/font_ss_14_gray8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_kava_main_net" />
        </LinearLayout>


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/band_chain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_4">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:src="@drawable/band_chain_img" />

            <TextView
                style="@style/font_ss_14_gray8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_band_main_net" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/bnb_test_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/bnb_test_net"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/space_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:src="@drawable/binancetestnet" />

                <TextView
                    style="@style/font_ss_14_gray8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:text="@string/str_bnb_test_net" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray10" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/kava_test_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/kava_test_net"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/space_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:src="@drawable/kava_test_img" />

                <TextView
                    style="@style/font_ss_14_gray8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:text="@string/str_kava_test_net" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iov_test_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/iov_test_net"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/space_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:src="@drawable/iov_testnet_img" />

                <TextView
                    style="@style/font_ss_14_gray8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:text="@string/str_iov_test_net" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray10" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ok_test_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ok_test_net"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/space_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:src="@drawable/okex_testnet_img" />

                <TextView
                    style="@style/font_ss_14_gray8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:text="@string/str_ok_test_net" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/certik_test_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/certik_test_net"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/space_4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:src="@drawable/certik_testnet_img" />

                <TextView
                    style="@style/font_ss_14_gray8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8"
                    android:text="@string/str_certik_test_net" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray10" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/gaia_12k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_4"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:src="@drawable/cosmos_wh_main" />

            <TextView
                style="@style/font_ss_14_gray6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_cosmos_test_net_12k" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gaia_13k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space_4"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:src="@drawable/cosmos_wh_main" />

            <TextView
                style="@style/font_ss_14_gray8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_cosmos_test_net_13k" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>